[gd_scene load_steps=19 format=2]

[ext_resource path="res://scenes/character/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/character/goblin/Goblin.gd" type="Script" id=2]
[ext_resource path="res://scripts/character/goblin/Interact.gd" type="Script" id=3]
[ext_resource path="res://scripts/ai/goap/agent_type/Worker.gd" type="Script" id=4]
[ext_resource path="res://scripts/ai/goap/GoapAgent.gd" type="Script" id=5]
[ext_resource path="res://scripts/ai/fsm/IdleState.gd" type="Script" id=6]
[ext_resource path="res://scripts/ai/fsm/MoveState.gd" type="Script" id=7]
[ext_resource path="res://scripts/ai/fsm/ActionState.gd" type="Script" id=8]
[ext_resource path="res://scripts/ai/goap/GoapPlanner.gd" type="Script" id=9]
[ext_resource path="res://scripts/ai/goap/actions/FindFirewoodAction.gd" type="Script" id=10]
[ext_resource path="res://scripts/ai/goap/actions/MineOreAction.gd" type="Script" id=11]
[ext_resource path="res://scripts/ai/goap/actions/CreatePickaxeAction.gd" type="Script" id=12]
[ext_resource path="res://scripts/ai/goap/actions/CreateWeaponAction.gd" type="Script" id=13]
[ext_resource path="res://scripts/ai/goap/actions/CreateFirewoodAction.gd" type="Script" id=14]
[ext_resource path="res://scripts/ai/goap/actions/CutTreeAction.gd" type="Script" id=15]
[ext_resource path="res://scripts/ai/goap/actions/CreateAxeAction.gd" type="Script" id=16]
[ext_resource path="res://scripts/character/Backpack.gd" type="Script" id=17]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 43.4342, 39.1318 )

[node name="BaseAiCharacter" index="0" groups=[
"enemy",
"interactable_character",
] instance=ExtResource( 1 )]

script = ExtResource( 2 )

[node name="Stats" parent="." index="0"]

move_speed = 200.0
speed = 1.0
max_health = 100.0
max_stamina = 100.0

[node name="CollisionShape2D" parent="." index="2"]

_sections_unfolded = [ "Visibility" ]

[node name="InteractArea" type="Area2D" parent="." index="4"]

position = Vector2( 0, -20 )
input_pickable = true
gravity_vec = Vector2( 0, 0 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 512
collision_mask = 0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 3 )
_sections_unfolded = [ "Collision", "Pickable", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea" index="0"]

shape = SubResource( 1 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="AI" type="Node" parent="." index="5"]

script = ExtResource( 4 )

[node name="GoapAgent" type="Node" parent="AI" index="0"]

script = ExtResource( 5 )

[node name="States" type="Node" parent="AI/GoapAgent" index="0"]

[node name="IdleState" type="Node" parent="AI/GoapAgent/States" index="0"]

script = ExtResource( 6 )
delay_time = 0.1

[node name="MoveState" type="Node" parent="AI/GoapAgent/States" index="1"]

script = ExtResource( 7 )
delay_time = 0.1

[node name="ActionState" type="Node" parent="AI/GoapAgent/States" index="2"]

script = ExtResource( 8 )

[node name="GoapPlanner" type="Node" parent="AI/GoapAgent" index="1"]

script = ExtResource( 9 )

[node name="GoapActions" type="Node" parent="AI/GoapAgent" index="2"]

script = ExtResource( 10 )
action_duration = 2.0

[node name="MineOre" type="Node" parent="AI/GoapAgent/GoapActions" index="0"]

script = ExtResource( 11 )
action_duration = 2.0

[node name="CreatePickaxe" type="Node" parent="AI/GoapAgent/GoapActions" index="1"]

script = ExtResource( 12 )
action_duration = 2.0

[node name="CreateWeapon" type="Node" parent="AI/GoapAgent/GoapActions" index="2"]

script = ExtResource( 13 )
action_duration = 2.0

[node name="CreateFirewood" type="Node" parent="AI/GoapAgent/GoapActions" index="3"]

script = ExtResource( 14 )
action_duration = 2.0

[node name="CutTree" type="Node" parent="AI/GoapAgent/GoapActions" index="4"]

script = ExtResource( 15 )
action_duration = 2.0

[node name="CreateAxe" type="Node" parent="AI/GoapAgent/GoapActions" index="5"]

script = ExtResource( 16 )
action_duration = 2.0

[node name="FindFirewood" type="Node" parent="AI/GoapAgent/GoapActions" index="6"]

script = ExtResource( 10 )
action_duration = 2.0

[node name="Backpack" type="Node" parent="." index="6"]

script = ExtResource( 17 )


